--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ nav a{
 
 /* footer */
 footer{
+  width: 100%;
   background-color: black;
   color: white;
   padding-top: 1vw;
@@ -121,10 +122,9 @@ footer a{
 
 /* container begin*/
 .container{
+     width: 100%;
      display: grid;
      grid-template-columns: 25% 25% 25% 25%;
-     grid-gap: 1vw;
-     width: 100%; 
 }
 .container>:first-child{
   grid-column: 1 / 5;
@@ -142,6 +142,8 @@ footer a{
 .container>:first-child img {
   width: 40%;
   height: auto;
+  padding: 3vw 1vw;
+  border-radius: 5vw; 
 }
 
 
@@ -168,14 +170,14 @@ footer a{
   grid-row: 2/3;
   font-size: 2vw;
   text-align:left;
-  padding: 0 10vw;
+  padding: 3vw 10vw;
 }
 .container>:nth-child(3){
   grid-column: 1 / -1;
   grid-row: 3/4;
   text-align:center;
-  padding: 0 10vw;
-  background-color:#75988d;
+  padding: 3vw 10vw;
+  background-color:#b8d1c9;
 }
 .container>:nth-child(3) img{
   width: 30%;
@@ -189,7 +191,7 @@ footer a{
 }
 .start_here a:focus {
   border: none;
-  outline: 1px dashed #00274C;
+  outline: 0.5vw dashed #00274C;
   outline-offset: 1vw;
   border-radius: 1vw; 
 }
@@ -197,7 +199,7 @@ footer a{
 .container>:nth-child(4){
   grid-column: 1 / -1;
   grid-row: 4/5;
-  padding: 0 10vw;
+  padding: 3vw 10vw;
   text-align: center;
 }
 .container>:nth-child(4) h2{
@@ -232,7 +234,7 @@ footer a{
 }
 .cdo-grid a:focus {
   border: none;
-  outline: 1px dashed #00274C;
+  outline: 0.5vw dashed #00274C;
   outline-offset: 1vw;
   border-radius: 1vw; 
 }
@@ -240,8 +242,8 @@ footer a{
 .container>:nth-child(5){
   grid-column: 1 / -1;
   grid-row: 5/6;
-  padding: 0 10vw;
-  background-color:#75988d;
+  padding: 3vw 10vw;
+  background-color:#b8d1c9;
 }
 
 /* .container>:nth-child(6){
@@ -254,7 +256,7 @@ footer a{
   grid-column: 1 / -1;
   grid-row: 7/8;
   padding: 0 10vw;
-  background-color:#75988d;
+  background-color:#b8d1c9;
 } */
 
 .net-grid {
@@ -263,19 +265,18 @@ footer a{
   padding: 0 10vw;
   display: grid;
   grid-template-columns: 70% 30%;
-  gap: 1vw;                
+  gap: 4vw;                
   align-items: center;
 }
 
 .net-grid>:nth-child(1) {
-  background: #f8f8f8;   /* optional: give each a background */
-  padding: 15px;         /* spacing inside */
+  background: #f8f8f8;
   grid-column: 1/2;
   grid-row: 1/3;
 }
 .net-grid>:nth-child(2) {
-  background: #00274C;   /* optional: give each a background */
-  padding: 15px;         /* spacing inside */
+  background: #00274C;
+  padding: 2vw;
   grid-column: 2/3;
   grid-row: 1/2;
   color: white;
