--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,14 @@ body{
   line-height: 1.15;
   margin: 0;
   padding: 0;
+  font-family: Montserrat, sans-serif;
 }
 h1{
   font-size: 5vw;
   line-height: 1;
   padding: 3vw 0;
   text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h2{
@@ -48,6 +50,7 @@ nav a:focus{
      border: 0.5vw dotted yellow;
 }
 .skip{
+     font-size: 2vw;
      background-color: #00284c;
 }
 .skip a{
@@ -80,6 +83,7 @@ nav li{
   font-size:2vw;
 }
 nav a{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #f2c200;
   font-weight: bold;
   text-decoration: none; 
@@ -136,7 +140,7 @@ footer a{
   text-align: center;
 }
 .container>:first-child h2{
-  padding: 0 4vw;
+  padding: 2vw 4vw;
   text-align: center;
 }
 .container>:first-child img {
@@ -225,12 +229,14 @@ footer a{
 
 .cdo-grid figure {
   text-align: center;
-  max-width: 100%
+  max-width: 100%;
+  font-size: 2vw;
 }
 .cdo-grid img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   border-radius: 2vw; 
+  padding: 1vw 0;
 }
 .cdo-grid a:focus {
   border: none;
@@ -270,7 +276,6 @@ footer a{
 }
 
 .net-grid>:nth-child(1) {
-  background: #f8f8f8;
   grid-column: 1/2;
   grid-row: 1/3;
 }
